--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-LE2BJPLO\\MSSQLSERVER01;Database=OfficeTicketDB;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=LAPTOP-LE2BJPLO\\MSSQLSERVER01;Database=OfficeTicketDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=OfficeTicket.db"
   },
   "Jwt": {
     "Key": "hgfyeutuUYEGUWYu763746bfvfgdh&Gfgg^^&*",
