--- a/appsettings.json
+++ b/appsettings.json
@@ -7,14 +7,22 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=LAPTOP-LE2BJPLO\\MSSQLSERVER01;Database=OfficeTicketDB;Trusted_Connection=True;TrustServerCertificate=True"
-    "DefaultConnection": "Data Source=OfficeTicket.db"
+    "DefaultConnection": "Server=LAPTOP-LE2BJPLO\\MSSQLSERVER01;Database=OfficeTicketDB;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Data Source=OfficeTicket.db"
   },
   "Jwt": {
     "Key": "hgfyeutuUYEGUWYu763746bfvfgdh&Gfgg^^&*",
     "Issuer": "OfficeTicketSystem",
     "Audience": "OfficeTicketSystemUsers"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "aniket.kum242@gmail.com",
+    "SenderDefaultEmail": "aniket.kum242@gmail.com",
+    "Password": "lhhxdsxbdomzzbuk"
   }
+
 
 
 }
